<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="48sp"
        android:textColor="@color/colorBlack"
        android:layout_centerInParent="true"
        android:text="@string/title" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="16dp"
        app:cardElevation="10dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/rounded_background_green"
                android:textColor="@color/colorWhite"
                android:text="@string/signin" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/rounded_background_blue"
                android:textColor="@color/colorWhite"
                android:text="@string/signup" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>