<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="16dp"
        app:cardElevation="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextBaseUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/rounded_background_grey"
                android:hint="@string/default_api_address"/>

            <Button
                android:id="@+id/buttonCheckServerConnection"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_background_green"
                android:text="@string/check_server_connection"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>