<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/item_header" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_below="@+id/headerView"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textColor="@color/colorBlack" />

    <android.support.v7.widget.CardView
        android:layout_below="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="10dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/layoutLogout"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:padding="8dp"
            android:layout_width="match_parent">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_signout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signout"
                android:layout_marginLeft="16dp"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        android:elevation="5dp"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="labeled"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>