<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_feeds" />

    <item
        android:id="@+id/navigation_approvals"
        android:icon="@drawable/ic_approvals"
        android:title="@string/title_approvals" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>
