<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_name"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_email"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_password"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/buttonDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_background_green"
                android:textColor="@color/colorWhite"
                android:hint="@string/dob"
                android:layout_marginRight="8dp"/>

            <Spinner
                android:id="@+id/spinnerDivision"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_background_blue"
            android:textColor="@color/colorWhite"
            android:text="@string/signup"/>

    </LinearLayout>

</RelativeLayout>